[gd_scene load_steps=3 format=2]

[ext_resource path="res://a2.mp3" type="AudioStream" id=1]
[ext_resource path="res://KeyController.gd" type="Script" id=2]

[node name="KeyController" type="Control"]
margin_right = 352.0
margin_bottom = 160.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.113725, 0.235294, 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 66.0
text = "Change Key"
align = 1
valign = 1

[node name="ButtonPlus" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -72.0
text = " + "

[node name="KeyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -66.0
margin_right = 112.0
text = "A"
align = 1
valign = 1

[node name="ButtonMinus" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 65.0
text = " - "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
pitch_scale = 1.58

[connection signal="pressed" from="ButtonPlus" to="." method="_on_ButtonPlus_pressed"]
[connection signal="pressed" from="ButtonMinus" to="." method="_on_ButtonMinus_pressed"]
